add_subdirectory(0202_0143)
add_subdirectory(0202_0144)
add_subdirectory(0202_0145)
add_subdirectory(0202_0146)
add_subdirectory(0202_0147)
llvm_singlesource_fujitsu(PREFIX "Fujitsu-C-")
set_property(SOURCE 0202_0075.c APPEND PROPERTY COMPILE_OPTIONS "-fno-inline-functions")
set_property(SOURCE 0202_0076.c APPEND PROPERTY COMPILE_OPTIONS "-fno-inline-functions")
set_property(SOURCE 0202_0077.c APPEND PROPERTY COMPILE_OPTIONS "-fno-inline-functions")
set_property(SOURCE 0202_0078.c APPEND PROPERTY COMPILE_OPTIONS "-fno-inline-functions")
set_property(SOURCE 0202_0079.c APPEND PROPERTY COMPILE_OPTIONS "-fno-inline-functions")
set_property(SOURCE 0202_0080.c APPEND PROPERTY COMPILE_OPTIONS "-fno-inline-functions")
set_property(SOURCE 0202_0086.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0086 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0202_0132.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0132 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0202_0133.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0133 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0202_0141.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0141 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0202_0142.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0142 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0202_0148.c APPEND PROPERTY COMPILE_OPTIONS "-fsigned-char")
set_property(SOURCE 0202_0149.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0149 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0202_0150.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0150 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0202_0151.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0151 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0202_0156.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0156 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0202_0157.c APPEND PROPERTY COMPILE_OPTIONS "-O1")
set_property(TARGET Fujitsu-C-0202_0157 APPEND PROPERTY LINK_OPTIONS "-O1")
set_property(SOURCE 0202_0158.c APPEND PROPERTY COMPILE_OPTIONS "-O1")
set_property(TARGET Fujitsu-C-0202_0158 APPEND PROPERTY LINK_OPTIONS "-O1")
set_property(SOURCE 0202_0159.c APPEND PROPERTY COMPILE_OPTIONS "-O1")
set_property(TARGET Fujitsu-C-0202_0159 APPEND PROPERTY LINK_OPTIONS "-O1")
set_property(SOURCE 0202_0160.c APPEND PROPERTY COMPILE_OPTIONS "-O1")
set_property(TARGET Fujitsu-C-0202_0160 APPEND PROPERTY LINK_OPTIONS "-O1")
set_property(SOURCE 0202_0161.c APPEND PROPERTY COMPILE_OPTIONS "-O1")
set_property(TARGET Fujitsu-C-0202_0161 APPEND PROPERTY LINK_OPTIONS "-O1")
set_property(SOURCE 0202_0162.c APPEND PROPERTY COMPILE_OPTIONS "-O1")
set_property(TARGET Fujitsu-C-0202_0162 APPEND PROPERTY LINK_OPTIONS "-O1")
set_property(SOURCE 0202_0163.c APPEND PROPERTY COMPILE_OPTIONS "-O1")
set_property(TARGET Fujitsu-C-0202_0163 APPEND PROPERTY LINK_OPTIONS "-O1")
set_property(TARGET Fujitsu-C-0202_0272 APPEND PROPERTY LINK_LIBRARIES "m")
set_property(SOURCE 0202_0273.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0273 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0202_0274.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0274 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0202_0275.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0275 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0202_0276.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0276 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0202_0277.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0277 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0202_0278.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0278 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0202_0279.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0279 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0202_0280.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0280 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0202_0281.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0281 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0202_0282.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0282 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0283 APPEND PROPERTY LINK_LIBRARIES "m")
set_property(TARGET Fujitsu-C-0202_0284 APPEND PROPERTY LINK_LIBRARIES "m")
set_property(TARGET Fujitsu-C-0202_0285 APPEND PROPERTY LINK_LIBRARIES "m")
set_property(SOURCE 0202_0288.c APPEND PROPERTY COMPILE_OPTIONS "-fno-builtin")
set_property(TARGET Fujitsu-C-0202_0288 APPEND PROPERTY LINK_LIBRARIES "m")
set_property(SOURCE 0202_0360.c APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0360 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C-0202_0410 APPEND PROPERTY LINK_LIBRARIES "m")
set_property(TARGET Fujitsu-C-0202_0411 APPEND PROPERTY LINK_LIBRARIES "m")
set_property(TARGET Fujitsu-C-0202_0412 APPEND PROPERTY LINK_LIBRARIES "m")
